# roam

./: .gitignore  AGENTS.md  BRIDGE_SETUP.md  README.md  ROAM_10X_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-01-roam.md
docs/superpowers/specs/: 2026-06-01-roam-design.md  2026-06-01-roam-v2-design.md
extension/: background.js  manifest.json  popup.html  popup.js
roam/: __main__.py  assets.py  bridge.py  browser.py  bypass.py  cache.py  cloudflare.py  config.py  cookies_import.py  cue.py  errors.py  extract.py  heal.py  humanize.py  markdown.py  memory.py  mode.py  popups.py  relevance.py  search.py  server.py  snapshot.py  stealth.py
scripts/: install.ps1  install.sh
tests/: conftest.py  test_api_capture.py  test_assets.py  test_bridge.py  test_browser.py  test_bypass.py  test_capability_tail.py  test_clean_parity.py  test_cloudflare.py  test_config.py  test_cookies.py  test_cookies_import.py  test_cue.py  test_errors.py  test_extensions.py  test_extract.py  test_extract_auto.py  test_humanize.py  test_memory.py  test_mode_and_bridge_wait.py  test_observe_act.py  test_perf.py  test_popups.py  test_relaunch.py  test_relevance.py  test_reliability.py  test_scrape.py  test_search.py  test_snapshot.py  test_stealth.py  test_tools.py  test_verify.py
tests/fixtures/: page.html  paywall.html  popup.html
tools/: sync_inject.py
